--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pydantic = "^2.6"
 pandas = "^2.2"
 numpy = "^1.26"
 pybaseball = "^2.2"
+requests = "^2.32"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
