--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "unicorn-website/next.config.ts", "use": "@vercel/next" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "unicorn-website/$1" }
+    { "src": "unicorn-website/package.json", "use": "@vercel/next" }
   ]
 }
