Harden UI + APIs: timeouts, fallbacks, caching, smoke checks

--- a/unicorn-website/package.json
+++ b/unicorn-website/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.13.2",
     "next": "16.0.8",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
