--- a/unicorn-website/package.json
+++ b/unicorn-website/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "@sentry/nextjs": "^10.15.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
