--- a/unicorn-website/vercel.json
+++ b/unicorn-website/vercel.json
@@ -2,5 +2,8 @@
   "version": 2,
   "builds": [
     { "src": "package.json", "use": "@vercel/next" }
+  ],
+  "crons": [
+    { "path": "/api/warm", "schedule": "*/5 * * * *" }
   ]
 }
