--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -13,12 +13,15 @@ jobs:
       - name: Smoke curl
         run: |
           set -euo pipefail
-          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/health
           curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/
-          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/teams
-          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/players/605141
-          curl -fsS --max-time 30 https://mlb-unicorn-web.vercel.app/api/teams
-          curl -fsS --max-time 30 https://mlb-unicorn-web.vercel.app/api/teams/119
-          curl -fsS --max-time 30 https://mlb-unicorn-web.vercel.app/api/players/605141
-          curl -fsS --max-time 30 https://mlb-unicorn-web.vercel.app/api/top50/2025-03-27
-          curl -fsS --max-time 10 https://mlb-unicorn-engine.onrender.com/top50/2025-03-27
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/health/
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/teams/
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/teams/119/
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/players/605141/
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/data/latest/meta.json
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/data/latest/teams.json
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/data/latest/unicorns.json
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/data/latest/players_index.json
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/data/latest/teams/119.json
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/data/latest/players/605141.json
+          curl -fsS --max-time 10 https://mlb-unicorn-web.vercel.app/404.html
